--- a/index.ipynb
+++ b/index.ipynb
@@ -268,11 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NYC'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hometown = 'NYC'"
+    "hometown = 'NYC'\n",
+    "hometown"
    ]
   },
   {
